// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`within workspacesSelectors the selectors match their snapshots for the includedSourceWorkspaceIdsSelector 1`] = `
[
  "1001",
  "1002",
]
`;

exports[`within workspacesSelectors the selectors match their snapshots for the includedSourceWorkspacesSelector 1`] = `
[
  {
    "entryCount": 20,
    "id": "1001",
    "isAdmin": true,
    "isIncluded": true,
    "linkedId": "clock-workspace-01",
    "memberOf": "workspaces",
    "name": "Test Workspace",
    "userIds": [
      "6001",
    ],
    "workspaceId": "1001",
  },
  {
    "entryCount": 20,
    "id": "1002",
    "isAdmin": true,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "workspaces",
    "name": "Test Workspace 2",
    "userIds": [
      "6001",
    ],
    "workspaceId": "1002",
  },
]
`;

exports[`within workspacesSelectors the selectors match their snapshots for the includedWorkspaceIdsByMappingSelector 1`] = `
{
  "source": [
    "1001",
    "1002",
  ],
  "target": [
    "clock-workspace-01",
  ],
}
`;

exports[`within workspacesSelectors the selectors match their snapshots for the missingTargetWorkspacesSelector 1`] = `
[
  {
    "entryCount": 20,
    "id": "1002",
    "isAdmin": true,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "workspaces",
    "name": "Test Workspace 2",
    "userIds": [
      "6001",
    ],
    "workspaceId": "1002",
  },
]
`;

exports[`within workspacesSelectors the selectors match their snapshots for the sourceWorkspacesForTransferSelector 1`] = `
[
  {
    "entryCount": 20,
    "id": "1002",
    "isAdmin": true,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "workspaces",
    "name": "Test Workspace 2",
    "userIds": [
      "6001",
    ],
    "workspaceId": "1002",
  },
]
`;

exports[`within workspacesSelectors the selectors match their snapshots for the workspaceIdToLinkedIdSelector 1`] = `
{
  "1001": "clock-workspace-01",
  "clock-workspace-01": "1001",
}
`;
